--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "swiper": "^11.1.5",
+    "tagcloud": "^1.1.0-1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@types/node": "^20",
