--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/swiper": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "effect": "^3.14.1",
     "framer-motion": "^11.3.2",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-typing-effect": "^2.0.5",
     "swiper": "^11.1.5",
     "tagcloud": "^1.1.0-1",
     "tailwind-merge": "^2.4.0",
@@ -34,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-typing-effect": "^2.0.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
