--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "next": "14.2.5",
     "next-themes": "^0.4.6",
     "react": "^18",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
+    "react-icon-cloud": "^4.1.7",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.16.0",
     "react-typing-effect": "^2.0.5",
     "swiper": "^11.1.5",
-    "tagcloud": "^1.1.0-1",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.174.0"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
